# deconz-ota-plugin

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  otau_file.cpp  otau_file.h  otau_file_loader.cpp  otau_file_loader.h  otau_model.cpp  otau_model.h  otau_node.cpp  otau_node.h  std_otau.pro  std_otau_plugin.cpp  std_otau_plugin.h  std_otau_widget.cpp  std_otau_widget.h  std_otau_widget.ui
